# portfolio

./: .dockerignore  .editorconfig  .eslintrc  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  Cargo.toml  Dockerfile  FUNDING.yml  README.md  app.sh  astro.config.ts  build.rs  clippy.toml  compose.yaml  deno.jsonc  deny.toml  eslint.config.mjs  frontpage-demo.html  index.html  links.html  lists.html  nunjucks.json  package-lock.json  package.json  test.sh  tsconfig.base.json  tsconfig.json  tsconfig.prod.json  tsconfig.test.json  vitest.config.ts  webfinger.json
.forgejo/workflows/: audit.yaml  deploy.yaml  deploy_pages.yaml  test.yaml
.github/workflows/: close-pr.yml
.woodpecker/: deploy_pages.yml
functions/: [[index]].ts  capsule.rs  config.rs  config.ts  factories.rs  fedi.test.ts  index.ts  main.rs
functions/factories/: factory.ts  mod.rs  onDemandTls.ts  on_demand_tls.rs  static_files.rs  webfinger.rs  webfinger.ts
functions/middleware/: cacheControl.ts  clacks.rs  clacks.ts  cors.rs  cors.ts  mod.rs  permissionsPolicy.ts  pronounsAcceptable.ts  pronouns_acceptable.rs  securityHeaders.ts  security_headers.rs  trim_slash.rs
functions/middleware/security_headers/: mod.rs  permissions_policy.rs
functions/testUtils/: assertHeaders.ts
functions/utils/: ifNotTesting.ts  memorials.rs  memorials.ts  mod.rs  responses.ts
pages/: _headers  contact.html  humans.txt  index.html  support.html  webfinger.json
pages/functions/: hello.ts
pages/styles/: colors.css  style.css  typography.css
public/: _headers  _redirects  humans.txt  robots.txt
public/.well-known/: fursona.json  host-meta.xml
public/.well-known/webfinger/: acct:average@average.name.json
public/fonts/Atkinson-Hyperlegible/: LICENSE.txt
public/rss/: styles.xsl
public/sitemap/: styles.xsl
public/styles/: style.css
src/: content.config.ts  env.d.ts
src/@types/: cc.d.ts  contact.d.ts
src/@types/@fec/: remark-a11y-emoji.ts
src/components/: Emoji.astro  ExternalLink.astro  Footer.astro  Header.astro  HintLink.astro  Link.astro  LocalLink.astro  Logo.astro  Nav.astro  PlainDate.astro  ProjectShowcase.astro  SocialLink.astro  Sona.astro  Sonas.astro
src/content/: config.ts
src/content/gemtext/: contact.gmi  index.gmi  support.gmi
src/content/ways/: _mirror-github-to-codeberg.md  block-bots-that-ignore-robots-txt.md  change-ua-firefox.md  configure-dict-macos.md  docker-firewall.md  ffmpeg-enable-subtitles.md  hide-bookmarks-button-firefox.md  move-git-repo-from-github-to-forgejo.md  multiuser-homebrew.md  redirect-domain.md  resolve-at-proto-did-from-handle.md  ways.md
src/helpers/: checkUrl.ts  consoleColors.ts  fursona.ts  logos.ts
src/layouts/: Layout.astro  WaysLayout.astro
src/pages/: 404.astro  404.md  _index.astro  contact.astro  contact.md  fursona.astro  index.astro  index.md  links.astro  links.md  now.md  sitemap.astro  support.astro  support.md  uses.md  work.astro  work.md
src/pages/support/: index.astro  thanks.md
src/pages/ways/: [...slug].astro  feed.xml.ts  index.astro
src/styles/: code.css  colors.css  style.css  typography.css  variables.css
styles/: colors.css  style.css  typography.css  variables.css
templates/: _emoji.njk  _footer.njk  _headerItem.njk  _layout.njk  _link.njk  _pageLink.njk  contact.njk  index.njk  support.njk
