[package]
name = "portfolio"
description = "My personal website. Very basic."
edition = "2024"
rust-version = "1.86.0"
repository = "https://git.average.name/AverageHelper/portfolio"
authors = ["AverageHelper"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluffer = { version = "4.0.1", default-features = false }
http = { version = "1.3.1", default-features = false }
include_dir = "0.7.4"
rand = "0.8.5"
rocket = "0.5.1"
rocket_async_compression = "0.6.1"
rust-embed = { version = "8.7.1", features = [
	"include-exclude",
	"compression",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.45.0"
url = "2.5.4"

[build-dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
markdown = "1.0.0"
md2gemtext = "0.1.0"
regex_static = "0.1.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "portfolio"
path = "functions/main.rs"
