[package]
name = "portfolio"
description = "My personal website. Very basic."
edition = "2024"
rust-version = "1.94.0"
repository = "https://git.average.name/AverageHelper/portfolio"
authors = ["AverageHelper"]
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
fluffer = { version = "4.0.2", default-features = false }
http = { version = "1.4.0", default-features = false }
include_dir = "0.7.4"
rand = "0.10.0"
rocket = "0.5.1"
rocket_async_compression = "0.6.1"
rust-embed = { version = "8.11.0", features = [
	"include-exclude",
	"compression",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
url = "2.5.8"

[dev-dependencies]
test-case = "3.3.1"

[build-dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
markdown = "1.0.0"
md2gemtext = "0.1.0"
regex_static = "0.1.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = "0.9.42"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "portfolio"
path = "functions/main.rs"
